--- a/1.vue初始化.html
+++ b/1.vue初始化.html
@@ -17,20 +17,22 @@
      * 组件
      * 声明式渲染语法
      *
+     *
+     * react
+     *      直接
+     * vue
+     *      方便 - 语法糖，隐藏了很多的细节
      */
 
-    // Vue实例（代表一个组件）
+
     let app = new Vue({
-        template: `
-            <div>
-                CSDN
-            </div>
-        `
-    });
-
-    console.log(app);
-
-    app.$mount('#app');
+            el: '#app',
+            template: `
+                <div>
+                    11111
+                </div>
+            `
+        });
 
 </script>
 
