--- a/1.vue初始化.html
+++ b/1.vue初始化.html
@@ -7,6 +7,7 @@
 <body>
 
 <div id="app">
+    CSDN
 </div>
 
 <script src="./js/vue.js"></script>
@@ -26,13 +27,9 @@
 
 
     let app = new Vue({
-            el: '#app',
-            template: `
-                <div>
-                    11111
-                </div>
-            `
-        });
+        el: '#app'
+    });
+
 
 </script>
 
