a0.04（example02-3-vue的template属性和html的优先级）

--- a/1.vue初始化.html
+++ b/1.vue初始化.html
@@ -25,9 +25,13 @@
      *      方便 - 语法糖，隐藏了很多的细节
      */
 
-
     let app = new Vue({
-        el: '#app'
+        el: '#app',
+        template: `
+            <div>
+                11111
+            </div>
+        `
     });
 
 
