--- a/1.vue初始化.html
+++ b/1.vue初始化.html
@@ -26,7 +26,7 @@
      */
 
     let app = new Vue({
-        el: '#app',
+        el: 'body',
         template: `
             <div>
                 11111
