a0.06（example02-5-template模板最终实现的是替换功能）

--- a/1.vue初始化.html
+++ b/1.vue初始化.html
@@ -26,9 +26,9 @@
      */
 
     let app = new Vue({
-        el: 'body',
+        el: '#app',
         template: `
-            <div>
+            <div z="1">
                 11111
             </div>
         `
