--- a/2.vue中的数据.html
+++ b/2.vue中的数据.html
@@ -13,6 +13,7 @@
     <p>用户名：{{user.username}}</p>
     <p>年龄：{{user.age}}</p>
     <hr>
+    {{arr}}
 </div>
 
 <script src="./js/vue.js"></script>
@@ -26,7 +27,8 @@
             title: 'GitHub',
             user: {
                 username: '6xiaodi'
-            }
+            },
+            arr: ['a', 'b']
         }
     });
 
