a0.15（example05-3——属性新增属性-js原理实现）

--- a/扩展-defineProperty.html
+++ b/扩展-defineProperty.html
@@ -16,6 +16,12 @@
 
     let arr = ['a', 'b'];
 
+    Array.prototype.push = function(val) {
+        let k = this.length;
+        dp(this, k);
+        arr[k] = val;
+    };
+
     for (let k in data) {
         if (data.hasOwnProperty(k)) {
             dp(data, k);
