--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -11,7 +11,8 @@
 <div id="app">
     <h1>hello，{{title}}</h1>
     <hr>
-    <p v-text="title">hello，</p>
+<!--    <p v-text="title">hello，</p>-->
+    <p v-text="'title'">hello，</p>
 </div>
 
 <script src="./js/vue.js"></script>
