--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -11,8 +11,7 @@
 <div id="app">
     <h1>hello，{{title}}</h1>
     <hr>
-<!--    <p v-text="title">hello，</p>-->
-    <p v-text="'title'">hello，</p>
+    <p v-text="title">hello，</p>
 </div>
 
 <script src="./js/vue.js"></script>
@@ -21,12 +20,17 @@
 
 
     let app = new Vue({
-        el: '#app',
+        // el: '#app',
         data: {
             title: '111-222',
             arr: ['a', 'b']
         }
     });
+
+    setTimeout(() => {
+        app.$mount('#app')
+    }, 5000);
+
 
 </script>
 
