--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        [v-cloak] {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -14,6 +17,7 @@
     <p v-text="title">hello，</p>
     <hr>
     <p v-cloak>{{title}}</p>
+
 </div>
 
 <script src="./js/vue.js"></script>
