--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
-        [v-cloak] {
+        [v-text],
+        [v-cloak]{
             display: none;
         }
     </style>
