a0.23（example03-2——引入v-html）

--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -19,7 +19,8 @@
     <hr>
     <p v-cloak>{{title}}</p>
     <hr>
-    <p>{{content}}}</p>
+    <!--    <p>{{content}}}</p>-->
+    <p v-html="content"></p>
 
 </div>
 
