--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -25,6 +25,8 @@
     <p v-pre>{{title}}</p>
     <hr>
     <p v-show="isShow">{{title}}</p>
+    <hr>
+    <p v-if="isShow">{{title}}</p>
 
 </div>
 
@@ -39,7 +41,7 @@
             title: '111-222',
             arr: ['a', 'b'],
             content: '<h1>Github</h1>',    //xss
-            isShow: true
+            isShow: false
         }
     });
 
