--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -27,7 +27,9 @@
     <p v-show="isShow">{{title}}</p>
     <hr>
     <p v-if="isShow">{{title}}</p>
-
+    <hr>
+    <div v-if="isLogin">用户01</div>
+    <div v-else>请登录</div>
 </div>
 
 <script src="./js/vue.js"></script>
@@ -41,7 +43,8 @@
             title: '111-222',
             arr: ['a', 'b'],
             content: '<h1>Github</h1>',    //xss
-            isShow: false
+            isShow: true,
+            isLogin: true
         }
     });
 
