a0.28（example07-2——v-else的使用注意事项）

--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -29,6 +29,7 @@
     <p v-if="isShow">{{title}}</p>
     <hr>
     <div v-if="isLogin">用户01</div>
+    <button>111</button>
     <div v-else>请登录</div>
 </div>
 
