--- a/3.vue中的指令.html
+++ b/3.vue中的指令.html
@@ -28,9 +28,15 @@
     <hr>
     <p v-if="isShow">{{title}}</p>
     <hr>
-    <div v-if="isLogin">用户01</div>
-    <button>111</button>
-    <div v-else>请登录</div>
+    <template v-if="isLogin">
+        <span>用户01</span>
+        <button>111</button>
+    </template>
+
+    <template v-else>
+        <button>111</button>
+        <span>请登录</span>
+    </template>
 </div>
 
 <script src="./js/vue.js"></script>
