a0.32（example09-2——循环列表数据更新产生关于key的问题——绑定id为key值）

--- a/4.key.html
+++ b/4.key.html
@@ -11,11 +11,14 @@
 <div id="app">
 
     <ul>
-        <li v-for="user in users">
+        <li v-for="user in users" :key="user.id">
             <input type="checkbox" />
             {{user.username}}
         </li>
     </ul>
+
+    <button @click="fn">按钮</button>
+
 </div>
 
 <script src="./js/vue.js"></script>
@@ -31,8 +34,14 @@
                 {id: 2, username: 'xh'},
                 {id: 3, username: 'zs'}
             ]
+        },
+        methods: {
+            fn() {
+                this.users = this.users.sort( _ => Math.random() - .5 );
+            }
         }
     });
+
 
 </script>
 
