--- a/4.key.html
+++ b/4.key.html
@@ -11,7 +11,7 @@
 <div id="app">
 
     <ul>
-        <li v-for="user in users" :key="user.id">
+        <li v-for="(user,index) in users" :key="index">
             <input type="checkbox" />
             {{user.username}}
         </li>
