--- a/5.属性绑定.html
+++ b/5.属性绑定.html
@@ -14,6 +14,8 @@
     <div :id="val"></div>
 
     <div :style="style1"></div>
+
+    <div :class="{'box1': isActive, 'box2': isChecked}"></div>
 </div>
 
 <script src="./js/vue.js"></script>
@@ -29,7 +31,9 @@
                 width: '100px',
                 height: '100px',
                 background: 'green'
-            }
+            },
+            isActive: true,
+            isChecked: true
         }
     });
 
