a0.42（example14-3——lazy修饰符的demo——.number解决隐患）

--- a/7.指令修饰符.html
+++ b/7.指令修饰符.html
@@ -12,9 +12,9 @@
 <!--    <hr>-->
 <!--    {{n1}}-->
 
-    <input type="text" v-model.lazy="n1" />
+    <input type="text" v-model.lazy.number="n1" />
     +
-    <input type="text" v-model.lazy="n2" />
+    <input type="text" v-model.lazy.number="n2" />
     =
     {{n1+n2}}
 
