--- a/8.事件.html
+++ b/8.事件.html
@@ -17,7 +17,7 @@
     <hr>
     <button @click="fn">按钮</button>
     {{v2}}
-    {{Math.random()}}
+    {{msg}}
 
 </div>
 
@@ -28,7 +28,8 @@
         el: '#app',
         data: {
             v1: 1,
-            v2: 1
+            v2: 1,
+            msg: Math.random()
         },
         methods: {
             fn(e) {
