--- a/8.事件.html
+++ b/8.事件.html
@@ -17,7 +17,6 @@
     <hr>
     <button @click="fn">按钮</button>
     {{v2}}
-    {{msg}}
 
 </div>
 
@@ -28,12 +27,12 @@
         el: '#app',
         data: {
             v1: 1,
-            v2: 1,
-            msg: Math.random()
+            v2: 1
         },
         methods: {
             fn(e) {
                 this.v2++;
+                console.log(e);
             },
         }
     });
