--- a/8.事件.html
+++ b/8.事件.html
@@ -18,6 +18,11 @@
     <button @click="fn">按钮</button>
     {{v2}}
 
+    <hr>
+    <ul>
+        <li v-for="user in users" :style="{color: user.checked ? 'red':''}">{{user.username}}</li>
+    </ul>
+
 </div>
 
 <script src="./js/vue.js"></script>
@@ -27,7 +32,12 @@
         el: '#app',
         data: {
             v1: 1,
-            v2: 1
+            v2: 1,
+            users: [
+                {id: 1, username: 'zs', checked: true},
+                {id: 2, username: 'ls', checked: false},
+                {id: 3, username: 'ww', checked: false}
+            ]
         },
         methods: {
             fn(e) {
