a0.54（example05——按钮事件VUE阻止默认行为）

--- a/9.事件修饰符.html
+++ b/9.事件修饰符.html
@@ -7,7 +7,8 @@
 <body>
 
 <div id="app">
-    <div style="padding: 50px; background: red" @click="fn1">
+<!--    <div style="padding: 50px; background: red" @click="fn1">-->
+    <div style="padding: 50px; background: red" @click="fn1" @contextmenu.prevent>
         <!--        <button @click="fn2">按钮</button>-->
         <button @click.stop="fn2">按钮</button>
     </div>
