--- a/9.事件修饰符.html
+++ b/9.事件修饰符.html
@@ -7,11 +7,13 @@
 <body>
 
 <div id="app">
-<!--    <div style="padding: 50px; background: red" @click="fn1">-->
     <div style="padding: 50px; background: red" @click="fn1" @contextmenu.prevent>
-        <!--        <button @click="fn2">按钮</button>-->
         <button @click.stop="fn2">按钮</button>
+        <button>111</button>
+        <button>222</button>
+        <button>333</button>
     </div>
+
 </div>
 
 <script src="./js/vue.js"></script>
@@ -26,16 +28,14 @@
         methods: {
 
             fn1() {
-                console.log('1111');
+                console.log('1111')
             },
 
             fn2(e) {
-                console.log('2222');
-                // e.stopPropagation();
+                console.log('2222')
             }
         }
     });
-
 </script>
 
 </body>
