a0.60（example02-2——bind中设置input的value却有反应。）

--- a/2.自定义指令.html
+++ b/2.自定义指令.html
@@ -19,10 +19,11 @@
     Vue.directive('focus', {
         bind(el, binding) {
             console.log('bind', el);
-            el.focus();
+            // el.focus();
+            el.value = 'CCCCCCCCCCCCCCCCCCC';
         },
         inserted(el, binding) {
-            console.log('inserted',el);
+            console.log('inserted');
         }
     });
 
