a0.61（example02-3——bind中focus生效原理，原生代码演示）

--- a/2.自定义指令.html
+++ b/2.自定义指令.html
@@ -35,6 +35,14 @@
             }
         }
     });
+
+    window.onload = function() {
+        let input = document.createElement('input');
+        // input.focus();
+        // document.body.appendChild(input);
+        document.body.appendChild(input);
+        input.focus();
+    }
 </script>
 
 </body>
