a0.74（example02-3——官网上的缓存演示案例-缓存实现）

--- a/10.计算属性-缓存.html
+++ b/10.计算属性-缓存.html
@@ -10,7 +10,7 @@
 
     <button @click="showDate=!showDate">showDate</button>
     <hr>
-    <p v-if="showDate">{{getNow()}}</p>
+    <p v-if="showDate">{{now}}</p>
 
 </div>
 
@@ -21,7 +21,7 @@
     let app = new Vue({
         el: '#app',
         data: {
-            showDate: false  // 控制时间显示与隐藏
+            showDate: false
         },
         computed: {
             now:{
