a0.76（example02-5——set案例实现全选双向数据绑定-设置set）

--- a/11.计算属性.html
+++ b/11.计算属性.html
@@ -62,6 +62,15 @@
             checkedAll: {
                 get() {
                     return this.users.every( user => user.checked );
+                },
+                set(newVal) {
+                    console.log(newVal);
+                    this.users = this.users.map( user => {
+                        return {
+                            ...user, // 解构
+                            checked: newVal
+                        }
+                    } );
                 }
             }
         },
