a0.83（example01-2——1个组件中顶层元素有且只能有1个）

--- a/1.创建组件.html
+++ b/1.创建组件.html
@@ -14,8 +14,10 @@
 
 <script>
     Vue.component('new-component', {
-        //el: ''  // 就是模板中的顶层元素
         template: `
+                <div>
+                    Github
+                </div>
                 <div>
                     Github
                 </div>
