a0.88（example02-2——在可复用组件内部定义一个变量，看能否在其内部的template访问）

--- a/2.可复用组件中的data.html
+++ b/2.可复用组件中的data.html
@@ -18,9 +18,13 @@
 <script>
 
     let newComponent = Vue.component('new-component', {
+        data: {
+            b: 100
+        },
+
         template: `
                 <div>
-                    aaaaa - {{a}}
+                    aaaaa - {{b}}
                 </div>
             `
 
