a0.89（example02-3——可复用组件中，data 必须是一个函数）

--- a/2.可复用组件中的data.html
+++ b/2.可复用组件中的data.html
@@ -18,8 +18,10 @@
 <script>
 
     let newComponent = Vue.component('new-component', {
-        data: {
-            b: 100
+        data() {
+            return {
+                b: 100
+            }
         },
 
         template: `
