--- a/3.为什么可复用组件的data必须是一个返回对象的函数.html
+++ b/3.为什么可复用组件的data必须是一个返回对象的函数.html
@@ -18,24 +18,22 @@
         }
     }
 
-    let newComponent1 = new VueComponent({
-        name: 'new-component1',
+    // component 工厂函数，对new的行为进行了包装
+    Vue.component = function(name, options) {
+        return new VueComponent({
+            name,
+            ...options
+        });
+    };
+
+
+    let newComponent1 = Vue.component('new-component1', {
         data: {
             a: 1
         }
     });
 
-    let newComponent2 = new VueComponent({
-        name: 'new-component2',
-        data: {
-            a: 1
-        }
-    });
-
-    // newComponent1._data 与 newComponent2._data 是否是同一个对象？
-    console.log(newComponent1, newComponent2);
-    newComponent2._data.a = 100;
-    console.log(newComponent1, newComponent2);
+    console.log( newComponent1 )
 </script>
 
 </body>
