a0.93（example02-7——原生js探究vue原理-解决data是对象带来的问题，探究真相）

--- a/3.为什么可复用组件的data必须是一个返回对象的函数.html
+++ b/3.为什么可复用组件的data必须是一个返回对象的函数.html
@@ -23,7 +23,8 @@
         return function() {
             return new VueComponent({
                 name,
-                ...options
+                ...options,
+                data: options.data()  // options.data()函数返回的对象赋值给data，成为一个新对象
             });
         }
     };
