a0.95（example03-2——props与data命名冲突）

--- a/4.props.html
+++ b/4.props.html
@@ -19,6 +19,11 @@
         let meCircle = Vue.component('me-circle', {
 
             props: ['r'],
+            data() {
+                return {
+                    r: 1
+                }
+            },
             template: `<div>r: {{r}} -> {{3.14 * r * r}}</div>`
 
         });
