a0.98（example04-3——传地址子级可修改父级的data）

--- a/5.父子组件通信.html
+++ b/5.父子组件通信.html
@@ -23,11 +23,15 @@
                 <span>{{data.name}}</span>
                 <button>-</button>
                 <span>{{data.quantity}}</span>
-                <button>+</button>
+                <button @click="increment">+</button>
             </div>
         `,
 
         methods: {
+            // 加数量
+            increment() {
+                this.data.quantity++;
+            }
         }
     });
 
