a0.99（example04-3——传值子级可修改父级的data被禁止）

--- a/5.父子组件通信.html
+++ b/5.父子组件通信.html
@@ -7,7 +7,12 @@
 <body>
 
 <div id="app">
-    <me-list v-for="item of items" :key="item.id" :data="item"></me-list>
+    <me-list
+            v-for="item of items"
+            :key="item.id"
+            :data="item"
+            :quantity="item.quantity"
+    ></me-list>
     <hr>
     总数：{{count}}
 </div>
@@ -17,12 +22,12 @@
 <script>
 
     let meList = Vue.component('me-list', {
-        props: ['data'],
+        props: ['data', 'quantity'],
         template: `
             <div>
                 <span>{{data.name}}</span>
                 <button>-</button>
-                <span>{{data.quantity}}</span>
+                <span>{{quantity}}</span>
                 <button @click="increment">+</button>
             </div>
         `,
@@ -30,7 +35,7 @@
         methods: {
             // 加数量
             increment() {
-                this.data.quantity++;
+                this.quantity++;
             }
         }
     });
