a1.02（example05-2——探究往子级传递回调函数修改data报错的原因）

--- a/5.父子组件通信.html
+++ b/5.父子组件通信.html
@@ -36,7 +36,8 @@
         methods: {
             // 加数量
             increment() {
-                this.fn();
+                // this.fn();
+                console.log(this.fn);
             }
         }
     });
