--- a/5.父子组件通信.html
+++ b/5.父子组件通信.html
@@ -12,7 +12,7 @@
             :key="item.id"
             :data="item"
             :quantity="item.quantity"
-            :fn="edit"
+            v-on:abc="edit"
     ></me-list>
     <hr>
     总数：{{count}}
@@ -36,7 +36,7 @@
         methods: {
             // 加数量
             increment() {
-                this.fn(this.data, this.data.quantity + 1);
+                this.$emit('abc', this.data, this.data.quantity + 1);
             }
         }
     });
