a1.10（example01-4—简易对话框实现-在html中写table用插槽嵌入页面）

--- a/8.插槽.html
+++ b/8.插槽.html
@@ -80,6 +80,7 @@
                     <span class="dialog_title">{{title}}</span>
                 </div>
                 <div class="dialog_content">
+                    <slot></slot>
                 </div>
             </div>
         `
