a1.17（example05-2—非 prop 特性的使用——方便加样式）

--- a/12.prop特性.html
+++ b/12.prop特性.html
@@ -7,7 +7,7 @@
 <body>
 
 <div id="app">
-    <my-component :n="1" me="zzzz"></my-component>
+    <my-component :n="1" style="color: #00B7FF"></my-component>
 </div>
 
 <script src="./js/vue.js"></script>
