a1.19（example06-2—非 prop 特性的使用——合并已有的特性）

--- a/12.prop特性.html
+++ b/12.prop特性.html
@@ -22,7 +22,7 @@
                 }
             }
         },
-        template: '<div me="1-2-3">{{n + 10}} - {{me}}</div>'
+        template: '<div me="1-2-3" style="background: green;">{{n + 10}}</div>'
     };
 
     let app = new Vue({
