a1.20（example07—非 prop 特性的使用——禁用特性继承）

--- a/12.prop特性.html
+++ b/12.prop特性.html
@@ -15,6 +15,7 @@
 <script>
 
     const myComponent = {
+        inheritAttrs: false,
         props: {
             n: {
                 validator(val) {
