a1.22（example02-1——beforeCreate组件生命周期——打印data和el）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -72,6 +72,8 @@
 
         beforeCreate() {
             console.log('beforeCreate');
+            console.log('data', this.$data);
+            console.log('el', this.$el);
         },
 
         // 构建完成以后
