a1.23（example02-2——Created的组件生命周期——打印data和el）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -79,8 +79,9 @@
         // 构建完成以后
         created() {
             console.log('created');
+            console.log('data', this.$data);
+            console.log('el', this.$el);
         },
-
         // 组件挂载之前
         beforeMount() {
             console.log('beforeMount');
