a1.24（example02-3——beforeMount的跟组件生命周期——打印el）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -82,9 +82,11 @@
             console.log('data', this.$data);
             console.log('el', this.$el);
         },
+
         // 组件挂载之前
         beforeMount() {
             console.log('beforeMount');
+            console.log('el', this.$el);
         },
 
         // 组件挂载完成以后
