a1.25（example02-4——beforeMount的子组件生命周期——打印el）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -33,6 +33,7 @@
         // 组件挂载之前
         beforeMount() {
             console.log('meComponent:beforeMount');
+            console.log('el', this.$el);
         },
 
         // 组件挂载完成以后
