a1.26（example02-5——Mounted的根组件生命周期——打印el）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -93,6 +93,7 @@
         // 组件挂载完成以后
         mounted() {
             console.log('mounted');
+            console.log('el', this.$el);
         },
 
         // 组件更新
