a1.28（example03-2——点击按钮 => 更新数据 => title）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -8,7 +8,8 @@
 
 <div id="app">
     <button @click="show=!show">隐藏</button>
-    <me-component :t="title" v-if="show"></me-component>
+    <button @click="title='me'">更新title</button>
+    <me-component :t="title"></me-component>
 </div>
 
 <script src="./js/vue.js"></script>
