a1.29（example03-3——点击按钮 => 更新数据（两个子组件） => title）

--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -10,6 +10,7 @@
     <button @click="show=!show">隐藏</button>
     <button @click="title='me'">更新title</button>
     <me-component :t="title"></me-component>
+    <me-component :t="title"></me-component>
 </div>
 
 <script src="./js/vue.js"></script>
