--- a/1.生命周期.html
+++ b/1.生命周期.html
@@ -10,7 +10,7 @@
     <button @click="show=!show">隐藏</button>
     <button @click="title='me'">更新title</button>
     <me-component :t="title"></me-component>
-    <me-component :t="title"></me-component>
+    <me-component :t="subtitle"></me-component>
 </div>
 
 <script src="./js/vue.js"></script>
@@ -67,6 +67,7 @@
         el: '#app',
         data: {
             title: 'Github',
+            subtitle: '前端开发',   // 子标题
             show: true
         },
 
