a1.33（example04-3——错误捕获使用—页面不做处理、不做捕获处理）

--- a/2.生命周期-错误捕获.html
+++ b/2.生命周期-错误捕获.html
@@ -125,12 +125,12 @@
         },
 
         //err：错误  vm：虚拟dom（组件实例）  info：信息
-        errorCaptured(err, vm, info) {
-            console.log('errorCaptured');
-            console.log(err, vm, info);
-            this.hasError = true;
-            return false;
-        }
+        // errorCaptured(err, vm, info) {
+        //     console.log('errorCaptured');
+        //     console.log(err, vm, info);
+        //     this.hasError = true;
+        //     return false;
+        // }
     });
 
 </script>
