--- a/3.生命周期—销毁.html
+++ b/3.生命周期—销毁.html
@@ -25,7 +25,7 @@
         `,
 
         created() {
-            setInterval(() => {
+            this._timer = setInterval(() => {
                 console.log(1);
             }, 100);
         },
@@ -36,6 +36,7 @@
 
         destroyed() {
             console.log('meComponent:destroyed');
+            clearInterval(this._timer);
         }
     };
 
