a1.41（example01-3——用动态组件实现点击按钮，切换组件）

--- a/7.动态组件引例.html
+++ b/7.动态组件引例.html
@@ -17,9 +17,7 @@
     <button @click="goto('RecycleBin')" :class="type=='RecycleBin' ? 'current' : ''">垃圾箱</button>
 
     <hr>
-    <in-box v-if="type=='InBox'"></in-box>
-    <post-mail v-if="type=='PostMail'"></post-mail>
-    <recycle-bin v-if="type=='RecycleBin'"></recycle-bin>
+    <component :is="type"></component>
 </div>
 
 <script src="./js/vue.js"></script>
